# mLLn

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
deplom/: MNNL_diplom_chistiy.txt  MNNL_oglavlenie.txt  _mnnl_src.md  inject_mnnl_body.py  Образец_диплома_с_ведомостью_документов.docx  Образец_диплома_с_ведомостью_документов.docx.bak  деплом пример.txt
ransform/: CMakeLists.txt  main.cpp  nn_demo.cpp  xor.cpp
ransform/bench/: bench_matmul.cpp
ransform/docs/: THESIS_SCOPE.md
ransform/nn/: activation_module.h  linear.h  mnnl_nn.h  module.h  sequential.h
ransform/tensor/: CMakeLists.txt  better.md  concepts.h  cuda_kernels.cu  cuda_kernels.h  cuda_util.h  saver.h  tensor.cu  tensor.h
ransform/tensor/core/: autograd.cu  autograd.h  concepts.h
ransform/tensor/math/: gemm.cu  gemm.h
ransform/tests/: CMakeLists.txt  nn_module_test.cpp  tensor_core_test.cpp  tensor_twenty_test.cpp
