cmake_minimum_required(VERSION 3.20)
project(tensor_lib VERSION 0.1.0 LANGUAGES CXX CUDA)
enable_language(CUDA)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_ARCHITECTURES 75 86 89)
set(SOURCES tensor.cu cuda_kernels.cu math/gemm.cu core/autograd.cu)
add_library(tensor STATIC ${SOURCES})
target_link_libraries(tensor CUDA::cudart CUDA::cublas)
target_include_directories(tensor PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
option(ENABLE_DEBUG "Enable debug output in Tensor" ON)

if(ENABLE_DEBUG)
    target_compile_definitions(tensor PRIVATE DEBUG_MODE=1)
    message(STATUS "=== Tensor DEBUG_MODE = ENABLED ===")
else()
    target_compile_definitions(tensor PRIVATE DEBUG_MODE=0)
    message(STATUS "=== Tensor DEBUG_MODE = DISABLED ===")
endif()